--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "grunt-contrib-concat": "~0.3.0",
     "grunt-contrib-connect": "~0.5.0",
     "grunt-contrib-copy": "~0.4.1",
-    "grunt-contrib-cssmin": "~0.7.0",
+    "grunt-contrib-cssmin": "~0.9.0",
     "grunt-contrib-htmlmin": "~0.1.3",
     "grunt-contrib-imagemin": "~0.3.0",
     "grunt-contrib-jshint": "~0.7.1",
@@ -19,10 +19,10 @@
     "grunt-contrib-watch": "~0.5.2",
     "grunt-google-cdn": "~0.2.0",
     "grunt-newer": "~0.6.1",
-    "grunt-ngmin": "~0.0.2",
+    "grunt-ngmin": "~0.0.3",
     "grunt-rev": "~0.1.0",
     "grunt-svgmin": "~0.2.0",
-    "grunt-usemin": "~2.0.0",
+    "grunt-usemin": "^2.1.1",
     "jshint-stylish": "~0.1.3",
     "load-grunt-tasks": "~0.4.0",
     "time-grunt": "~0.2.1",
